<?xml version="1.0"?>
<package format="3">
  <name>cubemars_controller</name>
  <version>0.0.1</version>
  <description>Minimal ROS 2 node for CubeMars AK motors via SocketCAN MIT mode</description>
  <maintainer email="marcotr@ethz.ch">Marco Trentini</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cubemars_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
