<?xml version="1.0"?>
<package format="3">
  <name>cubemars_msgs</name>
  <version>0.0.1</version>
  <description>CubeMars AK motor ROS 2 message and service definitions</description>
  <maintainer email="marcotr@ethz.ch">Marco Trentini</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
